# rusty-particles

./: .gitignore  Cargo.toml  README.md  index.html  rusty-particles.wasm
.github/workflows/: deploy.yml
src/: consts.rs  controls.rs  main.rs  physics.rs  scene.rs  setup.rs  state.rs  types.rs  utils.rs
web/: index.html
