[package]
name = "rusty-particles"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
# rand = "0.9.2"
rayon = "1.11.0"

# For WASM support
# [target.wasm32-unknown-unknown.dependencies]
# getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
# getrandom    = { version = "0.3", features = ["wasm_js"] }